[gd_scene load_steps=4 format=3 uid="uid://c18w0dhft65lw"]

[ext_resource type="Script" path="res://K9/Lvls/MM/main_menu_Script.gd" id="1_kutuj"]
[ext_resource type="Texture2D" uid="uid://b4r5s7knl3jjk" path="res://K9/Modules/2D/WsG_Qr_B.png" id="2_0ety0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88254"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_bottom = 2
border_color = Color(0.368627, 0.368627, 0.368627, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 4
shadow_offset = Vector2(-3, 3)

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kutuj")

[node name="MMSelections" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 482.0
offset_right = 111.0
offset_bottom = 618.0

[node name="Button" type="Button" parent="MMSelections"]
layout_mode = 2
text = "Start"

[node name="Button2" type="Button" parent="MMSelections"]
layout_mode = 2
text = "Options"

[node name="Button3" type="Button" parent="MMSelections"]
layout_mode = 2
text = "Credits"

[node name="Button4" type="Button" parent="MMSelections"]
layout_mode = 2
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 513.0
offset_top = 28.0
offset_right = 583.0
offset_bottom = 51.0
text = "TitleCard"

[node name="Start_menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 493.0
offset_top = 221.0
offset_right = 586.0
offset_bottom = 322.0

[node name="Button" type="Button" parent="Start_menu"]
layout_mode = 2
text = "New Game
"

[node name="Button2" type="Button" parent="Start_menu"]
layout_mode = 2
disabled = true
text = "Continue"

[node name="Button3" type="Button" parent="Start_menu"]
layout_mode = 2
text = "Back
"

[node name="Credits_Screen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WsGQrB" type="Sprite2D" parent="Credits_Screen"]
position = Vector2(895, 212)
scale = Vector2(0.166658, 0.166658)
texture = ExtResource("2_0ety0")

[node name="Panel" type="Panel" parent="Credits_Screen"]
layout_mode = 0
offset_left = 721.0
offset_top = 407.0
offset_right = 1071.0
offset_bottom = 557.0
theme_override_styles/panel = SubResource("StyleBoxFlat_88254")

[node name="Label" type="Label" parent="Credits_Screen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -24.5
offset_right = 159.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "A WoodShed Games Production, with our 
partners and friends!"
horizontal_alignment = 1
